namespaces/live.cloud-platform.service.justice.gov.uk/manage-key-workers-preprod/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: manage-key-workers-preprod
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "preprod"
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HMPPS"
    cloud-platform.justice.gov.uk/application: "manage-key-workers"
    cloud-platform.justice.gov.uk/owner: "Digital Prison Services: dps-hmpps@digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/manage-key-workers.git"
    cloud-platform.justice.gov.uk/slack-alert-channel: "dps_alerts_non_prod"
    cloud-platform.justice.gov.uk/slack-channel: "dps_adjudications"
    cloud-platform.justice.gov.uk/team-name: "dps-core"
